# makerplane-data

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  regions.yaml
.github/workflows/: ci.yml  cyclical.yml  terrain.yml  water.yml
configurator/: .dev.vars.example  CLAUDE.md  README.md  package-lock.json  package.json  wrangler.jsonc
configurator/migrations/: 0001_init.sql
configurator/public/: editor.html  index.html
configurator/src/: crypto.ts  db.ts  email.ts  google.ts  index.ts  mail.ts  session.ts  types.ts
docs/: canadian_airports.md  ci_build_pipeline.md  cloudflare_setup.md  data_manager_implementation.md  data_manager_strategy.md  device_deployment.md  europe_coverage.md  on_device_pack_picker.md  panel_config_format.md  regionalize_bulk_packs.md  roads.md  svs_runway_terrain.md  system_designer.md  terrain.md  water.md
fonts/: README.md  install-fonts.sh
keys/: minisign.pub
packtools/: __init__.py  cli.py  cycles.py  fetch.py  make_terrain.py  manifest.py  ourairports.py  packmeta.py  publish.py  regions.py  run_cyclical.py  signing.py  sources.py  upload.py
pyefis_data/: __init__.py  cli.py  config.py  config_pull.py  core.py
pyefis_data/systemd/: 99-makerplane-data.rules  makerplane-usb-import@.service  pyefis-config-pull.service  pyefis-data.service  pyefis-data.timer  usb-import.sh
site/: data.yaml.sample  index.html
tests/: test_cli.py  test_config_pull.py  test_cycles.py  test_manifest.py  test_orchestrator.py  test_ourairports.py  test_packmeta.py  test_pi_config.py  test_pi_picker.py  test_pi_updater.py  test_regions.py  test_signing.py  test_sources.py  test_terrain.py  test_water.py
